ESERCIZI/ES002/corso-ntt-38/Infra/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: corso-ntt-38
  labels:
    app: corso-ntt-38
    environment: production
    team: devops
